<resources>
    <string name="app_name">TuAppto</string>

    <string name="principal_image_description">La imagen principal de la aplicación</string>
    <string name="important_image_description">Muestra que es una elección importante</string>
    <string name="user_image_description">Es la imagen de usuario con la persona que se va a reunir</string>
    <string name="camera_image_description">Imagen con forma de cámara para indicar que si se oprime accedera a la camara</string>
    <string name="gallery_image_description">Imagen con forma de galería para indicar que si se oprime accedera a la galeria</string>
    <string name="property_image_description">Es la imagen de la propiedad</string>
    <string name="filters_image_description">Es la imagen del botón para acceder a los filtros</string>

    <string name="first_option_buyer">Ver propiedades</string>
    <string name="second_option_buyer">Mis favoritos</string>
    <string name="third_option_buyer">Chats</string>
    <string name="four_option_buyer">Citas</string>

    <string name="first_option_seller">Publicar propiedad</string>
    <string name="second_option_seller">Lista de mis propiedades</string>
    <string name="third_option_seller">Lista de interesados</string>
    <string name="four_option_seller">Citas</string>

    <string name="dates_text">CITAS</string>
    <string name="chat_text">CHAT</string>
    <string name="chats_text">CHATS</string>
    <string name="choose_text">ELECCIÓN</string>
    <string name="date_information_text">IMFORMACION CITA</string>
    <string name="edit_publication_text">EDITAR PUBLICACION</string>
    <string name="filters_text">FILTROS</string>
    <string name="my_interests_text">MIS INTERESES</string>
    <string name="interested_text">INTERESADOS</string>
    <string name="make_date_text">AGENDAR CITA</string>
    <string name="my_publications_text">MIS PUBLICACIONES</string>
    <string name="property_text">PROPIEDAD</string>
    <string name="publish_property_text">PUBLICAR PROPIEDAD</string>
    <string name="registry_text">REGISTRO</string>
    <string name="properties_text">PROPIEDADES</string>

    <string name="upload_photo_text">Cargar foto</string>
    <string name="price_text">Precio: </string>
    <string name="location_text">Ubicación: </string>
    <string name="sale_text">Venta</string>
    <string name="rent_text">Arriendo</string>
    <string name="rooms_text">Habitaciones: </string>
    <string name="area_text">Área: </string>
    <string name="kind_text">Tipo: </string>
    <string name="meters_text">mts</string>
    <string name="parking_lot_text">Parqueaderos: </string>
    <string name="description_text">Descripción: </string>
    <string name="user_text">Correo</string>
    <string name="password_text">Contraseña</string>
    <string name="name_text">Nombre</string>
    <string name="second_name_text">Apellido</string>
    <string name="phone_string">Telefono</string>
    <string name="on_sale_text">en Venta</string>
    <string name="on_rent_text">en Arriendo</string>
    <string name="on_both">en Venta y Arriendo</string>

    <string name="make_date_button">AGENDAR CITA</string>
    <string name="temporal_button">TEMPORAL</string>
    <string name="owner_button">DUEÑO</string>
    <string name="client_button">CLIENTE</string>
    <string name="cancel_button">CANCELAR</string>
    <string name="save_button">GUARDAR</string>
    <string name="apply_button">APLICAR</string>
    <string name="log_in_text_button">INGRESAR</string>
    <string name="check_in_button">REGISTRARSE</string>
    <string name="chat_button">CHAT</string>
    <string name="add_to_interest_button">AGREGAR A INTERESES</string>
    <string name="remove_interest_button">REMOVER DE INTERESES</string>
    <string name="publish_button">PUBLICAR</string>
    <string name="continue_button">CONTINUAR</string>

    <string name="log_out_option">Cerrar sesión</string>

    <string name="zero">0</string>
    <string name="empty_description">No hay descripción por el momento</string>
    <string name="empty_kind">No hay tipo</string>


    <string name="chat_1">Hola, buenos dias</string>
    <string name="chat_2">Hola, mira el apartamento es nuevo y los vendo porque quiero plata</string>
    <string name="owner_option">Si oprimes la opción de DUEÑO tendrás la capacidad de publicar tus viviendas para que sean vendidas o arrendadas, según tu preferencia</string>
    <string name="client_option">Si oprimes la opción CLIENTE tendrás la capacidad de ver las publicaciones de los dueños y concretar una cita para comprar o arrendar una vivienda</string>
    <string name="date_information">Tienes una cita con Pepito perez a las 8 de la mañana el dia jueves 23 de mayo del 2020 en la avenida carrera 70 # 63a - 82</string>
    <string name="property_information">Es una casa muy linda que contiene 3 alcobas, cuenta con 3 parqueaderos, la cual se encuentra a la venta por $200.000.000</string>

    <string-array name="userType">
        <item>Dueño</item>
        <item>Cliente</item>
    </string-array>

    <string-array name="propertyType">
        <item>Venta</item>
        <item>Arriendo</item>
    </string-array>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="area">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
    </string-array>

    <string-array name="numbers2">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_publish_property">Map</string>
    <string name="title_activity_buyer_menu">BuyerMenuActivity</string>
    <string name="chat_date">Cita</string>
    <string name="report_planned_date">IngresarFecha</string>
    <string name="title_activity_street_view">Map</string>
</resources>
