<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <ImageView
        android:id="@+id/principalImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/principal_image_description"
        app:srcCompat="@drawable/inicial"
        android:alpha="0.2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/text_view"
            android:text="@string/registry_text"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/text_view_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/textCargarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/upload_photo_text"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:contentDescription="@string/camera_image_description"
                android:id="@+id/imageButtonCamera"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/text_view_transparent"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButtonGallery"
                app:layout_constraintStart_toEndOf="@+id/textCargarFoto"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/camera" />

            <ImageButton
                android:contentDescription="@string/gallery_image_description"
                android:id="@+id/imageButtonGallery"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/text_view_transparent"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gallery" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:contentDescription="@string/user_image_description"
            android:id="@+id/imageView5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:srcCompat="@drawable/gallery"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="285dp"
            android:layout_height="35dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/user_text"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="285dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/key"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="285dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/continue_button"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="285dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/name_text"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="285dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/second_name_text"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="285dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/phone_string"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>