<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:contentDescription="@string/principal_image_description"
        android:id="@+id/principalImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/inicial"
        android:alpha="0.2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:clickable="true"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true" />

        <Button
            android:id="@+id/buttonViewProperties"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="76dp"
            android:text="@string/first_option_buyer"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView"
            android:background="@drawable/button"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/eye" />

        <Button
            android:id="@+id/buttonMyFavourites"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:drawableStart="@drawable/heart"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/second_option_buyer"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonViewProperties" />

        <Button
            android:id="@+id/buttonChats"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:drawableStart="@drawable/chat"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/third_option_buyer"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMyFavourites" />

        <Button
            android:id="@+id/buttonDates"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:drawableStart="@drawable/calendar"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/four_option_buyer"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonChats" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>