<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <ImageView
        android:contentDescription="@string/principal_image"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/inicial"
        android:alpha="0.2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/principal_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/principal" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="76dp"
            android:text="@string/first_option_seller"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:background="@drawable/button"
            android:paddingLeft="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/house" />

        <Button
            android:id="@+id/button4"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/alignLeft"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:text="@string/second_option_seller"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/fallowers"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:text="@string/third_option_seller"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:text="@string/four_option_seller"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>